2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Use the
	  OnDestroyed event instead of Dispose, since with the latest changes
	  in gtk#, Dispose is not called anymore when a widget is destroyed.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: New
	  project model changes.

2008-05-15  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Track API
	  changes.

2008-03-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.mdp: Update references.

2008-03-07  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui.OptionPanels/BehaviorTextEditorPanel.cs:
	* MonoDevelop.SourceEditor.Gui.OptionPanels/SyntaxHighlightingPanel.cs:
	* MonoDevelop.SourceEditor.Gui.OptionPanels/MarkersTextEditorPanel.cs:
	* MonoDevelop.SourceEditor.Gui.OptionPanels/GeneralTextEditorPanel.cs:
	* MonoDevelop.SourceEditor.addin.xml: Track options panel API changes.

2008-03-06  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs:
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	* MonoDevelop.SourceEditor/Services.cs:
	* MonoDevelop.SourceEditor.Gui.Dialogs/GotoLineNumberDialog.cs:
	  Track API changes to get the GtkSourceView2 editor building again. 

2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* Makefile.am: Managed texteditor is now standard - the gtksourceview1&2 are
	  now optional.

2008-02-06  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Tidy up
	  commenting/uncommenting code, using atomic undos, and fix "Bug 325469 -